[gd_scene load_steps=11 format=2]

[ext_resource path="res://scenes/objects/Ocean/Ocean.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/levels/Island01/Island01.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/miscs/CameraRig/CameraRig.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/objects/ships/SwedishRoyalYachtAmadis/SwedishRoyalYachtAmadis.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/miscs/SceneSpawner/SceneSpawner.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/miscs/SelectorHandler/SelectorHandler.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/ui/BoatControl/BoatControl.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/games/TestInventory/GameMenu.gd" type="Script" id=8]
[ext_resource path="res://scenes/games/TestInventory/TestInventory.gd" type="Script" id=9]
[ext_resource path="res://scenes/objects/Crate/Crate.tscn" type="PackedScene" id=10]

[node name="TestInventory" type="Spatial"]
script = ExtResource( 9 )

[node name="Ocean" parent="." instance=ExtResource( 1 )]

[node name="Island01" parent="." instance=ExtResource( 2 )]

[node name="SwedishRoyalYachtAmadis" parent="." instance=ExtResource( 4 )]

[node name="Crate" parent="." instance=ExtResource( 10 )]

[node name="CameraRig" parent="." instance=ExtResource( 3 )]
mode = "Gimbal"
target_path = NodePath("../SwedishRoyalYachtAmadis/CaptainPlace")

[node name="SceneSpawner" parent="." instance=ExtResource( 5 )]

[node name="SelectorHandler" parent="." instance=ExtResource( 6 )]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -322.0
margin_top = -169.0
margin_right = -20.0
margin_bottom = -20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShipControl" parent="CanvasLayer/MarginContainer" instance=ExtResource( 7 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 302.0
margin_bottom = 149.0
ship_path = NodePath("../../../SwedishRoyalYachtAmadis")

[node name="MarginContainer2" type="MarginContainer" parent="CanvasLayer"]
margin_right = 354.0
margin_bottom = 41.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameMenu" type="HBoxContainer" parent="CanvasLayer/MarginContainer2"]
margin_right = 354.0
margin_bottom = 41.0
script = ExtResource( 8 )

[node name="InventoryButton" type="Button" parent="CanvasLayer/MarginContainer2/GameMenu"]
margin_right = 73.0
margin_bottom = 41.0
text = "Inventory"

[connection signal="pressed" from="CanvasLayer/MarginContainer2/GameMenu/InventoryButton" to="." method="_on_InventoryButton_pressed"]
